external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_missing_quote.exp
error[E01008]: invalid hex string
  ┌─ tests/move_check/parser/hexstring_missing_quote.move:3:9
  │
3 │         x"abcd
  │         ^^^^^^ Missing closing quote (") after byte string

error[E04007]: incompatible types
  ┌─ tests/move_check/parser/hexstring_missing_quote.move:4:5
  │
2 │     public fun missing_quote(): vector<u8> {
  │                                 ---------- Expected: 'vector<u8>'
3 │         x"abcd
4 │     }
  │     ^
  │     │
  │     Invalid return expression
  │     Given: '()'

