external-crates/move/crates/move-compiler/tests/move_check/parser/hexstring_missing_quote.move
module 0x42::M {
    public fun missing_quote(): vector<u8> {
        x"abcd
    }
}
